--- a/BMI-example from the Stata course.Rmd
+++ b/BMI-example from the Stata course.Rmd
@@ -764,7 +764,7 @@ Does our regression output agree with the graph in question 4? What are the ‘s
 The age coefficients of the regressions clearly show that BMI increases with age substantially faster for women than for men between the ages of 20 and 40.
 
 
-#### Information about this seesion
+#### Information about this session
 
 ```{r}
 sessionInfo()
