--- a/BMI-example from the Stata course.Rmd
+++ b/BMI-example from the Stata course.Rmd
@@ -327,7 +327,7 @@ nids%>%
   mutate(freq = n/sum(n)*100)%>%
   ggplot(., aes(x = bmi_bins, y = freq)) + 
   geom_bar(stat = "identity", width=.3) + 
-  theme_minimal() +
+  theme_bw() +
   geom_text(aes(label=round(freq,1)), vjust=-0.2) +
   xlab("BMI bins") + ylab("Percent")
 ```
@@ -340,7 +340,7 @@ nids%>%
   ggplot(., aes(bmi_bins)) +
   geom_bar(aes(y = (..count..)/sum(..count..)), width=.3) +
   scale_y_continuous(labels=scales::percent) + 
-  theme_minimal() +
+  theme_bw() +
   xlab("BMI bins") + ylab("Percent")
 ```    
     
@@ -354,7 +354,7 @@ nids%>%
     geom_bar(aes(y = ..prop..), stat="count") +
     geom_text(aes( label = scales::percent(..prop..),
                    y= ..prop.. ), stat= "count", vjust = -.5) +
-    theme_minimal() +
+    theme_bw() +
     labs(y = "Percent") +
     facet_grid(~gender) +
     scale_y_continuous(labels = scales::percent) 
@@ -372,7 +372,7 @@ nids%>%
     labs(y = "Percent") +
     facet_wrap(~geotype, ncol = 2) +
     scale_y_continuous(labels = scales::percent) + 
-  theme_minimal()
+  theme_bw()
 ```
 
 
@@ -410,7 +410,7 @@ nids%>%
   ggplot(., aes(x=age_adult)) +
    geom_histogram( aes(y = ..density..), binwidth = 1) +
    facet_wrap(~race) + 
-  theme_minimal() +
+  theme_bw() +
    xlab("Age in years - adults") + ylab("Density")
 ```   
 
@@ -482,7 +482,7 @@ Since BMI and income are both continuous variables it is easiest to summarize th
 ```{r}
 ggplot(nids, aes(hh.pcinc, bmi)) +
   geom_point() + 
-  theme_minimal() +
+  theme_bw() +
   ggtitle("Scatterplot of BMI and pc hh_income") +
   ylab("Respondent's Body Mass Index")
 ```
@@ -496,7 +496,7 @@ Redraw the scatterplot restricting the range of BMI and income as suggested and 
 ```{r}
 ggplot(nids[nids$bmi_valid == 1 & nids$hh.pcinc <= 14000,], aes(hh.pcinc, bmi)) +
   geom_point() + 
-  theme_minimal() +
+  theme_bw() +
   stat_smooth(method = "lm", size=1, formula = y ~ x, se = FALSE)
 ```
 
@@ -512,7 +512,7 @@ nids%>%
   ggplot(., aes(hh.pcinc, bmi, color = gender)) +
   geom_point() + 
   stat_smooth(method = "lm", size=1, formula = y ~ x, se = FALSE) + 
-  theme_minimal() +
+  theme_bw() +
   ggtitle("Comparing BMI and income (by gender)") +
   ylab("BMI")
 ```  
@@ -557,7 +557,7 @@ nids%>%
   geom_point() +
   stat_smooth(method = "lm", formula = y ~ x, se = FALSE, colour = "blue", aes(colour = "linear")) +
   stat_smooth(method = "lm", formula = y ~ poly(x, 2), se = FALSE, colour = "red") + 
-  theme_minimal() +
+  theme_bw() +
   ggtitle("Comparing BMI and income(for women)")
 ```
 
@@ -590,11 +590,11 @@ A simple scatterplot gives us the relationship between BMI and age over differen
 ```{r message = F, warning = F}
 ggplot(corr2.df, aes(x = age_adult, y = bmi)) +
   geom_point(aes(x = age_adult, y = bmi)) +
-  stat_smooth(method = "lm", formula = y ~ x, se = FALSE, colour = "red") + 
-  stat_smooth(method = "lm", formula = y ~ poly(x, 2), se = FALSE, colour = "green") +
+  stat_smooth(method = "lm", formula = y ~ x, se = FALSE, colour = "blue") + 
+  stat_smooth(method = "lm", formula = y ~ poly(x, 2), se = FALSE, colour = "red") +
   scale_x_continuous(breaks=seq(20,100,20)) +
   scale_y_continuous(breaks=seq(10,50,10)) + 
-  theme_minimal() +
+  theme_bw() +
   xlab("Age in years - adults") + ylab("BMI") +
   ggtitle("Scatter plot of BMI and age")
 ```
@@ -621,7 +621,7 @@ We can investigate this by plotting the mean bmi by age variable against age.
 ```{r}
 ggplot(bmi_age_df, aes(x = age_adult, y = bmi_age)) +
   geom_point(aes(x = age_adult, y = bmi_age), colour="blue") +
-  theme_minimal() +
+  theme_bw() +
   xlab("Age") + ylab("Mean BMI (by age_adult)") +
   ggtitle("Mean BMI by Age")
 ```
@@ -728,7 +728,7 @@ nids%>%
   summarise(bmi_age_gender = mean(bmi, na.rm = T)) %>%
   ggplot(., aes(x = age_adult, y = bmi_age_gender, color = gender)) +
   geom_point(aes(x = age_adult, y = bmi_age_gender)) +
-  theme_minimal() +
+  theme_bw() +
   xlab("Age") + ylab("Mean BMI (by age_adult)") +
   ggtitle("Mean BMI by Age")
 ``` 
@@ -757,7 +757,7 @@ Plotting
 ```{r}
 ggplot(bmiage, aes(x = age_adult, y = bmi_age_gen, group = gender, color = gender)) +
   geom_point() + stat_smooth(method = "lm", formula = y ~ x, se = FALSE) +
-  theme_minimal() +
+  theme_bw() +
   xlab("Age in years - adults") + ylab("BMI") + ggtitle("Comparing mean BMI by age & gender groupings")
 ```
 
